--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <center>
    <h1>Welcome to The <p class="no-u">NO U!</p> Gallery</h1><p><p class="no-u">UNO</p> Reverse Cards</p>
-   <p><p class="trigger-words">Info: </p><p class="information"><p class="no-u">UNO</p> reverse Cards reverses the order of turns</p>
+   <p><p class="trigger-word">Info: </p><p class="information"><p class="no-u">UNO</p> reverse Cards reverses the order of turns</p>
    <h6>(Submitted by: <p class="submitter">Pirate01</a>)</h6></p>
 
    <!---->
