--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>NO U! Gallery Sandbox</title>
+  <title>NO U! Gallery</title>
   <link rel="icon" type="imagex-icon" href="no u red.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="submitters.css">
